// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<StepStatus /> should render 1`] = `
.c1 {
  color: #3e486e;
  font-size: 1.6rem;
  font-weight: 400;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1.6rem;
  cursor: pointer;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c4 {
  position: relative;
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: calc(1.6rem * 1.25);
  height: calc(1.6rem * 1.25);
  margin: calc(1.6rem / 5) calc(2 * 1.6rem / 3) 0 0;
  padding: 0;
  line-height: inherit;
  background: #fff;
  border: 1px solid #bbcadf;
  border-radius: 50%;
  box-shadow: none;
  cursor: pointer;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c4:before {
  position: absolute;
  top: 50%;
  left: 50%;
  display: none;
  width: calc(1.6rem / 1.5);
  height: calc(1.6rem / 1.5);
  background-color: #f66663;
  border-radius: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  content: "";
}

.c4:checked {
  background-color: #fff;
  border-color: #f66663;
}

.c4:checked:before {
  display: block;
}

.c0 {
  display: block;
  margin-top: 1rem;
  margin-bottom: 1rem;
  font-size: 1.8rem;
  font-weight: 600;
  cursor: pointer;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-bottom: 0.8rem;
}

@media (max-width:600px) {
  .c0 {
    font-size: 1.6rem;
  }
}

<div>
  <label
    class="c0"
  >
    Le licenciement est-il dû à une faute grave (ou lourde) ?
    <span
      class="c1"
    >
       (obligatoire)
    </span>
  </label>
  <div
    class="c2"
  >
    <div
      class="c3"
    >
      <input
        class="c4"
        id="seriousMisconduct-oui"
        name="seriousMisconduct"
        type="radio"
        value="true"
      />
      <label
        class="c5"
        for="seriousMisconduct-oui"
      >
        Oui
      </label>
    </div>
    <div
      class="c3"
    >
      <input
        class="c4"
        id="seriousMisconduct-non"
        name="seriousMisconduct"
        type="radio"
        value="false"
      />
      <label
        class="c5"
        for="seriousMisconduct-non"
      >
        Non
      </label>
    </div>
  </div>
</div>
`;

exports[`<StepStatus /> should render coefficient 1`] = `
.c7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding: 0;
  color: #3e486e;
  font-weight: normal;
  font-size: 1.6rem;
  line-height: 1.625;
  vertical-align: baseline;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: left;
  background: none;
  border: none;
  border-radius: 0;
  overflow: visible;
  -webkit-transition: color 250ms linear, text-decoration 250ms linear;
  transition: color 250ms linear, text-decoration 250ms linear;
}

.c7:focus,
.c7:hover,
.c7:active {
  color: #f66663;
}

.c1 {
  color: #3e486e;
  font-size: 1.6rem;
  font-weight: 400;
}

.c8 {
  display: inline-block;
  font-weight: 700;
  font-size: 1.4rem;
  color: #7994d4;
  margin-left: 0.8rem;
  padding: 0.5rem;
  height: 2rem;
  width: 2rem;
  position: relative;
  bottom: -0.5rem;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1.6rem;
  cursor: pointer;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c4 {
  position: relative;
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: calc(1.6rem * 1.25);
  height: calc(1.6rem * 1.25);
  margin: calc(1.6rem / 5) calc(2 * 1.6rem / 3) 0 0;
  padding: 0;
  line-height: inherit;
  background: #fff;
  border: 1px solid #bbcadf;
  border-radius: 50%;
  box-shadow: none;
  cursor: pointer;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c4:before {
  position: absolute;
  top: 50%;
  left: 50%;
  display: none;
  width: calc(1.6rem / 1.5);
  height: calc(1.6rem / 1.5);
  background-color: #f66663;
  border-radius: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  content: "";
}

.c4:checked {
  background-color: #fff;
  border-color: #f66663;
}

.c4:checked:before {
  display: block;
}

.c10 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  text-align: center;
}

.c13 {
  position: absolute;
  top: 1.6rem;
  right: 1.6rem;
  width: 1.6rem;
  height: 1.6rem;
  color: #f66663;
  pointer-events: none;
}

.c12 {
  width: 100%;
  height: 5.4rem;
  padding: 0 2rem 0;
  padding-right: 5rem;
  color: #3e486e;
  font-size: 1.6rem;
  font-family: "Open Sans",sans-serif;
  vertical-align: middle;
  background-color: #fff;
  border: none;
  border-radius: 0.6rem;
  box-shadow: 0 1rem 2rem rgba(121,148,212,0.2);
  cursor: pointer;
  -webkit-transition: border-color 250ms ease;
  transition: border-color 250ms ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c12::-ms-expand {
  background-color: transparent;
  border: 0 transparent;
}

.c12 *::-ms-backdrop,
.c12 {
  padding-right: 1.6rem;
}

.c12:invalid {
  border-color: #eb5757;
}

.c12:disabled {
  background-color: #e4e8ef;
}

.c0 {
  display: block;
  margin-top: 1rem;
  margin-bottom: 1rem;
  font-size: 1.8rem;
  font-weight: 600;
  cursor: pointer;
}

.c9 {
  display: block;
  margin-bottom: 0.4rem;
  font-size: 1.6rem;
  cursor: pointer;
}

.c11 {
  width: 40rem;
}

.c6 {
  margin-bottom: 3.2rem;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-bottom: 0.8rem;
}

@media (max-width:600px) {
  .c7 {
    font-size: 1.4rem;
  }
}

@media print {
  .c7 {
    display: none;
  }
}

@media (max-width:600px) {
  .c10 {
    width: 100%;
  }
}

@media (max-width:600px) {
  .c0 {
    font-size: 1.6rem;
  }
}

@media (max-width:600px) {
  .c9 {
    font-size: 1.4rem;
  }
}

@media (max-width:600px) {
  .c11 {
    width: 100%;
  }
}

<div>
  <label
    class="c0"
  >
    Le licenciement est-il dû à une faute grave (ou lourde) ?
    <span
      class="c1"
    >
       (obligatoire)
    </span>
  </label>
  <div
    class="c2"
  >
    <div
      class="c3"
    >
      <input
        class="c4"
        id="seriousMisconduct-oui"
        name="seriousMisconduct"
        type="radio"
        value="true"
      />
      <label
        class="c5"
        for="seriousMisconduct-oui"
      >
        Oui
      </label>
    </div>
    <div
      class="c3"
    >
      <input
        checked=""
        class="c4"
        id="seriousMisconduct-non"
        name="seriousMisconduct"
        type="radio"
        value="false"
      />
      <label
        class="c5"
        for="seriousMisconduct-non"
      >
        Non
      </label>
    </div>
  </div>
  <label
    class="c0"
  >
    Le salarié concerné est-il reconnu en tant que travailleur handicapé ?
    <span
      class="c1"
    >
       (obligatoire)
    </span>
  </label>
  <div
    class="c2"
  >
    <div
      class="c3"
    >
      <input
        checked=""
        class="c4"
        id="disabledWorker-oui"
        name="disabledWorker"
        type="radio"
        value="true"
      />
      <label
        class="c5"
        for="disabledWorker-oui"
      >
        Oui
      </label>
    </div>
    <div
      class="c3"
    >
      <input
        class="c4"
        id="disabledWorker-non"
        name="disabledWorker"
        type="radio"
        value="false"
      />
      <label
        class="c5"
        for="disabledWorker-non"
      >
        Non
      </label>
    </div>
  </div>
  <div
    class="c6"
  >
    <label
      class="c0"
      for="input-cdt.ancienneté"
    >
      ancienneté
      <span
        class="c1"
      >
         (obligatoire)
      </span>
      <button
        aria-label="Plus d'informations"
        class="c7 c8"
        title="Plus d'informations"
        type="button"
      >
        <svg
          aria-label="?"
          fill="none"
          height="20"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <path
            d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"
          />
          <line
            x1="12"
            x2="12.01"
            y1="17"
            y2="17"
          />
        </svg>
      </button>
    </label>
    <label
      class="c9"
    >
      Choisissez parmi les catégories d'ancienneté telles que définies par le Code du travail
    </label>
    <div
      class="c10 c11"
    >
      <select
        class="c12"
        id="input-cdt.ancienneté"
        name="cdt.ancienneté"
      >
        <option
          disabled=""
          value=""
        >
          ...
        </option>
        <option
          value="15| Moins de 6 mois"
        >
          Moins de 6 mois
        </option>
        <option
          value="33| 6 mois à moins de 2 ans"
        >
          6 mois à moins de 2 ans
        </option>
        <option
          value="43| Plus de 2 ans"
        >
          Plus de 2 ans
        </option>
      </select>
      <div
        aria-hidden="true"
        class="c13"
      >
        <svg
          aria-hidden="true"
          fill="none"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            clip-path="url(#arrow-down_svg__a)"
          >
            <path
              d="m8.425 11.573 7.11-6.072a.709.709 0 0 0 .26-.537.709.709 0 0 0-.26-.537.973.973 0 0 0-.629-.223.973.973 0 0 0-.63.223l-6.48 5.536-6.481-5.536a.973.973 0 0 0-.63-.223.973.973 0 0 0-.628.223.708.708 0 0 0-.261.537c0 .202.094.395.26.537l7.11 6.072a.91.91 0 0 0 .29.165 1.021 1.021 0 0 0 .68 0 .91.91 0 0 0 .29-.165z"
              fill="currentColor"
            />
          </g>
          <defs>
            <clippath
              id="arrow-down_svg__a"
            >
              <path
                d="M0 0h16v16H0z"
                fill="currentColor"
              />
            </clippath>
          </defs>
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`<StepStatus /> should render seriousMisconduct 1`] = `
.c1 {
  color: #3e486e;
  font-size: 1.6rem;
  font-weight: 400;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1.6rem;
  cursor: pointer;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c4 {
  position: relative;
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: calc(1.6rem * 1.25);
  height: calc(1.6rem * 1.25);
  margin: calc(1.6rem / 5) calc(2 * 1.6rem / 3) 0 0;
  padding: 0;
  line-height: inherit;
  background: #fff;
  border: 1px solid #bbcadf;
  border-radius: 50%;
  box-shadow: none;
  cursor: pointer;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c4:before {
  position: absolute;
  top: 50%;
  left: 50%;
  display: none;
  width: calc(1.6rem / 1.5);
  height: calc(1.6rem / 1.5);
  background-color: #f66663;
  border-radius: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  content: "";
}

.c4:checked {
  background-color: #fff;
  border-color: #f66663;
}

.c4:checked:before {
  display: block;
}

.c0 {
  display: block;
  margin-top: 1rem;
  margin-bottom: 1rem;
  font-size: 1.8rem;
  font-weight: 600;
  cursor: pointer;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-bottom: 0.8rem;
}

@media (max-width:600px) {
  .c0 {
    font-size: 1.6rem;
  }
}

<div>
  <label
    class="c0"
  >
    Le licenciement est-il dû à une faute grave (ou lourde) ?
    <span
      class="c1"
    >
       (obligatoire)
    </span>
  </label>
  <div
    class="c2"
  >
    <div
      class="c3"
    >
      <input
        class="c4"
        id="seriousMisconduct-oui"
        name="seriousMisconduct"
        type="radio"
        value="true"
      />
      <label
        class="c5"
        for="seriousMisconduct-oui"
      >
        Oui
      </label>
    </div>
    <div
      class="c3"
    >
      <input
        checked=""
        class="c4"
        id="seriousMisconduct-non"
        name="seriousMisconduct"
        type="radio"
        value="false"
      />
      <label
        class="c5"
        for="seriousMisconduct-non"
      >
        Non
      </label>
    </div>
  </div>
  <label
    class="c0"
  >
    Le salarié concerné est-il reconnu en tant que travailleur handicapé ?
    <span
      class="c1"
    >
       (obligatoire)
    </span>
  </label>
  <div
    class="c2"
  >
    <div
      class="c3"
    >
      <input
        class="c4"
        id="disabledWorker-oui"
        name="disabledWorker"
        type="radio"
        value="true"
      />
      <label
        class="c5"
        for="disabledWorker-oui"
      >
        Oui
      </label>
    </div>
    <div
      class="c3"
    >
      <input
        class="c4"
        id="disabledWorker-non"
        name="disabledWorker"
        type="radio"
        value="false"
      />
      <label
        class="c5"
        for="disabledWorker-non"
      >
        Non
      </label>
    </div>
  </div>
</div>
`;
